# ghast

./: .gitignore  .gitmodules  Cargo.toml  baum.ghast  pi.txt  み.ll
.github/: copilot-instructions.md
.kilo/plans/: 1776956712394-silent-comet.md
examples/: jit_putchar.rs  jit_puts.rs  無名再帰.rs
monapa/src/: lib.rs  operators.rs  parser.rs  utils.rs
src/: builtins.rs  corelang.rs  coretype.rs  ghast.rs  lib.rs  main.rs  monad.rs  operator.rs  operators.rs  parser.rs  phase2.rs  phase3.rs  primary.rs  utils.rs
