[package]
name = "ghast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monapa = { path = "./monapa" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm16-0-prefer-dynamic",
] }
rustyline = "14.0.0"
