[package]
name = "ghast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monapa = { path = "./monapa" }
pomprt = { path = "./pomprt" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm17-0-prefer-dynamic",
] }
